--- a/composer.json
+++ b/composer.json
@@ -8,28 +8,28 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2.5",
+        "php": "^7.4|^8.0",
         "barryvdh/laravel-dompdf": "^0.9.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^6.3",
+        "guzzlehttp/guzzle": "^7.0.1",
         "intervention/image": "^2.5",
-        "laravel/framework": "^7.24",
+        "laravel/framework": "^8.0",
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "2.4",
-        "maatwebsite/excel": "^3.1",
+        "laravel/ui": "^3.4",
+       
         "paypal/rest-api-sdk-php": "^1.14",
         "spatie/laravel-permission": "^4.0",
         "stripe/stripe-php": "^7.73",
         "unisharp/laravel-filemanager": "^2.2"
     },
     "require-dev": {
-        "facade/ignition": "^2.0",
+        "facade/ignition": "^2.3.6",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5"
+        "nunomaduro/collision": "^5.0",
+        "phpunit/phpunit": "^9.0"
     },
     "config": {
         "optimize-autoloader": true,
